hphp/hack/test/typecheck/sealed/method_trait_02.php.exp
ERROR: File "method_trait_02.php", line 20, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "method_trait_02.php", line 20, characters 19-21:
  You cannot override the method because it is sealed.
  File "method_trait_02.php", line 7, characters 19-21:
  Declaration is here
ERROR: File "method_trait_02.php", line 30, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "method_trait_02.php", line 30, characters 19-21:
  You cannot override the method because it is sealed.
  File "method_trait_02.php", line 7, characters 19-21:
  Declaration is here
